--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
   crossorigin="anonymous"
 /> 
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
@@ -62,8 +62,8 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="plot.js"></script>
-  <script src="charts.js"></script>
+  <script src="static/js/plot.js"></script>
+  <script src="static/js/charts.js"></script>
   
 
 
