--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body class="bg-dark"></body>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron bg-info textwhite text-center">
+      <div class="col-md-12 jumbotron bg-info textdark text-center">
         <div class="container-fluid"></div>
         <h1 style="font-family:courier;">Belly Button Biodiversity Dashboard</h1>
         <p style="font-family:courier;">Use the interactive charts below to explore the dataset!</p>
