--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="row">
       <div class="col-md-12 jumbotron bg-info textdark text-center">
         <div class="container-fluid"></div>
-        <h1 style="font-family:courier;">Belly Button Biodiversity Dashboard</h1>
-        <p style="font-family:courier;">Use the interactive charts below to explore the dataset!</p>
+        <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif;">Belly Button Biodiversity Dashboard</h1>
+        <p style="font-family:Verdana, Geneva, Tahoma, sans-serif;"><strong><u>Use the interactive charts below to explore the dataset!</u></strong> </p>
       </div>
     </div>
     <div class="row">
